# LLM_difficulty_recommendations

./: .gitignore  README.md  pyproject.toml  requirements.txt
difficulty_estimation/: a_Datasets.ipynb  b_OpenAiModelsTraining.ipynb  c_OpenAiEvaluation.ipynb  d_OpenSourceModelsTraining.ipynb  e_OpenSourceModelsEvaluation.ipynb  f_OpenSourceModelsFineTuning.ipynb  f_PairwiseMismatch.ipynb  g_CreateFigures.ipynb  g_PairwiseMismatch.ipynb
figures/difficulty_estimation/: accuracy.pgf  french-difficulty.tex  ljl.tex  sentences.tex
figures/topic_classification/: accuracy_Davinci-002.pgf  accuracy_Flaubert-fine-tuned.pgf  accuracy_Flaubert-pretrained.pgf  accuracy_GPT-3.5-turbo-1106.pgf  accuracy_mDeBERTa.pgf
recommender_system/: 1 RecommanderData.ipynb  a_GetZeeguData.ipynb  b_GenerateEmbeddings.ipynb  c_Recommendations.ipynb  d_Graphic.ipynb
src/: DataManager.py  DifficultyEstimationModel.py
src/utilitaries/: hugging_face.py
topic_classification/: a_DataPreparation.ipynb  b_Zero-Shot.ipynb  c_OpenAiTopicClassification.ipynb  d_FlaubertFineTuned.ipynb  e_CreateFigures.ipynb
